Bug 159507 - [Fetch API] Response.redirect should throw a RangeError in case of bad status code
Summary: [Fetch API] Response.redirect should throw a RangeError in case of bad status...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords:
Depends on:
Blocks: 151937
  Show dependency treegraph
 
Reported: 2016-07-07 01:36 PDT by youenn fablet
Modified: 2016-07-07 09:03 PDT (History)
1 user (show)

See Also:


Attachments
Patch (4.43 KB, patch)
2016-07-07 01:42 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2016-07-07 01:36:19 PDT
[Fetch API] Response.redirect should throw a RangeError in case of bad status code
Comment 1 youenn fablet 2016-07-07 01:42:18 PDT
Created attachment 282998 [details]
Patch
Comment 2 WebKit Commit Bot 2016-07-07 09:03:56 PDT
Comment on attachment 282998 [details]
Patch

Clearing flags on attachment: 282998

Committed r202909: <http://trac.webkit.org/changeset/202909>
Comment 3 WebKit Commit Bot 2016-07-07 09:03:59 PDT
All reviewed patches have been landed.  Closing bug.