[Fetch API] Response.redirect should throw a RangeError in case of bad status code https://bugs.webkit.org/show_bug.cgi?id=159507

Patch by Youenn Fablet <youenn@apple.com> on 2016-07-07
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/response/response-static-redirect-expected.txt:

Source/WebCore:

Covered by rebased test.

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::redirect): Throw a RangeError in case of bad status.

Canonical link: https://commits.webkit.org/177639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202909 268f45cc-cd09-0410-ab3c-d52691b4dbfc